--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "lib": ["ES2015", "DOM"]
     },
+    "include": ["src/**/*"],
     "files": [
       "index.ts"
     ]
