--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "pyshop-csv-to-json",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "bin": {
+    "csvToJson": "./bin/csvToJson.js"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "npx tsc",
+    "run": "node ./built/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +26,13 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/node": "^17.0.5",
     "babel-jest": "^27.4.5",
+    "commander-ts": "^0.2.0",
     "jest": "^27.4.5",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "commander": "^8.3.0"
   }
 }
