--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "lib": ["ES2015", "DOM"]
+        "lib": ["ES2015", "DOM"],
+        "outDir": "./built"
     },
     "include": ["src/**/*"],
     "files": [
