--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "build": "npx tsc",
-    "run": "node ./built/index.js"
+    "convert": "node bin/csvtojson.js"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,12 @@
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
+    "@types/commander": "^2.12.2",
     "@types/node": "^17.0.5",
     "babel-jest": "^27.4.5",
     "commander-ts": "^0.2.0",
     "jest": "^27.4.5",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
