--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": ["ES2015", "DOM"],
+        "lib": ["ES2015", "DOM", "ES6"],
         "outDir": "./built"
     },
     "include": ["src/**/*"],
